syntax = "proto3";

package forum;

option go_package = "github.com/Van-programan/Forum_GO/proto/forumservice";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service ForumService {
  rpc CreateTopic (CreateTopicRequest) returns (Topic);
  rpc GetTopic (GetTopicRequest) returns (Topic);
  rpc GetTopics (GetTopicsRequest) returns (GetTopicsResponse);
  rpc DeleteTopic (DeleteTopicRequest) returns (google.protobuf.Empty);
  
  rpc CreateMessage (CreateMessageRequest) returns (Message);
  rpc GetMessages (GetMessagesRequest) returns (GetMessagesResponse);
  rpc DeleteMessage (DeleteMessageRequest) returns (google.protobuf.Empty);
}

message Topic {
  int64 id = 1;
  string title = 2;
  int64 author_id = 3;
  google.protobuf.Timestamp created_at = 4;
}

message Message {
  int64 id = 1;
  int64 topic_id = 2;
  int64 user_id = 3;
  string content = 4;
  google.protobuf.Timestamp created_at = 5;
}

message CreateTopicRequest {
  string title = 1;
  int64 author_id = 2;
}

message GetTopicRequest {
  int64 id = 1;
}

message GetTopicsRequest {}

message GetTopicsResponse {
  repeated Topic topics = 1;
}

message DeleteTopicRequest {
  int64 id = 1;
}

message CreateMessageRequest {
  int64 topic_id = 1;
  int64 user_id = 2;
  string content = 3;
}

message GetMessagesRequest {
  int64 topic_id = 1;
}

message GetMessagesResponse {
  repeated Message messages = 1;
}

message DeleteMessageRequest {
  int64 id = 1;
}